flat-white: Fix non-Rmd rchunk code styles without breaking inline code
It's a bit hacky, but both inline `code` and normal code chunks are given .ace_support.ace_function class. I added a selector that tries to catch code chunks, which are "inline code" except that they definitely are either the first one or the first child in the line is an invisible character (.ace_invisible).

The unforunate side-effect is that the first backtick of an inline code chunk won't be highlighted correctly.

--- a/inst/templates/flat-white.scss
+++ b/inst/templates/flat-white.scss
@@ -88,6 +88,14 @@ $rmd-href-bg: $green-bg;
   color: $orange-text;
   background-color: $orange-bg;
 }
+// this next selector misses the first backtick of inline code chunks
+// if they're the first thing on the line,
+// but it doesn't background highlight regular markdown code chunks
+.ace_line > .ace_invisible:first-child + [class="ace_support ace_function"],
+.ace_line > [class="ace_support ace_function"]:first-child {
+  color: #845009; // orange-related
+  background-color: inherit;
+}
 
 /* Rmd bold and italics */
 .ace_constant.ace_numeric.ace_text {
